# GAMES101-Notes-Assignments

./: .gitignore  README.md  笔记.md
GAMES101-HW/Assignment0/: CMakeLists.txt  main.cpp
GAMES101-HW/Assignment1/代码框架/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
GAMES101-HW/Assignment2/代码框架/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
GAMES101-HW/Assignment3/Code/: CMakeLists.txt  Shader.hpp  Texture.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
GAMES101-HW/Assignment4/code/: CMakeLists.txt  main.cpp
GAMES101-HW/Assignment5/Code/: CMakeLists.txt  Light.hpp  Object.hpp  Renderer.cpp  Renderer.hpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  global.hpp  main.cpp
GAMES101-HW/Assignment6/Assignment6/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Triangle.hpp
GAMES101-HW/Assignment7/Assignment7/: BVH.cpp  CMakeLists.txt  Scene.cpp  Triangle.hpp
GAMES101-HW/Assignment8/src/: mass.h  rope.cpp  rope.h  spring.h
